2010-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Michael biebl:
	* configure.ac: Fix FreeBSD default serial port name.
	* doc/avrdude.texi: (Dito.)

2010-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: If entering JTAG mode fails with a bad JTAG ID
	message, retry with external reset applied (in case the target
	is in sleep mode or has asserted the JTD bit).

2010-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Aurelien Jarno:
	* configure.ac: Fix build for GNU/kFreeBSD.
	* ppi.c: (Dito.)
	* par.c: (Dito.)

2010-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for post-5.8.

2010-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for release 5.8.

2010-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Soren Jorvang:
	bug #28611: -i delay not being applied to all serial port
	bit banging state transitions
	* serbb_win32.c: Apply ispdelay everywhere.
	* serbb_posix.c: (Dito.)

2010-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2_private.h: Implement TPI mode for AVRISPmkII/STK600
	* config_gram.y: (Dito.)
	* avrpart.h: (Dito.)
	* stk500v2.c: (Dito.)
	* main.c: (Dito.)
	* lexer.l: (Dito.)
	* avrdude.conf.in: Add ATtiny4/5/9/10
	* avrdude.1: Document TPI and new device support.
	* doc/avrdude.texi: (Dito.)

2010-01-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by clint fisher:
	patch #7038: Adding Atmega32U4 Device to avrdude.conf.in
	* avrdude.conf.in (atmega32u4): New device.
	* avrdude.1: Document the new device support.
	* doc/avrdude.texi: (Dito.)

2010-01-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Thomas Pircher:
	patch #6927: Documentation patches
	* doc/avrdude.texi: Fix various typos, and remove the last
	remnants of obsoleted options -i/-o/-m/-f.
	* avrdude.1: Merge typo fixes from avrdude.texi where
	applicable.

2010-01-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
